base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: nginx-ssl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
          - containerPort: 8080
        resources:
          limits:
            memory: 64Mi
            cpu: 250m
          # requests:
          #   memory: 256Mi
          #   cpu: 250m
