base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: nginx
spec:
  host: nginx-ssl.apps.ocp4.rhpg.org
  # path: /
  to:
    kind: Service
    name: nginx
  port:
    targetPort: 8443
  tls:
    termination: passthrough
